# autonomus_brief_research_agent

./: .gitignore  GEMINI.md  agent.py  main.py  prompts.py  pyproject.toml  skills-lock.json  state.py  test.py  tools.py
src/agent/: agent.py
src/agent/utils/: llm.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
